# Knomosis

./: .gitignore  AGENTS.md  CLAUDE.md  DeferralAudit.lean  Deployments.lean  LegalKernel.lean  Lex.lean  LexCodegen.lean  LexDiff.lean  LexFormat.lean  LexLint.lean  Main.lean  NamingAudit.lean  README.md  Replay.lean  THIRD_PARTY_ASSETS.md  Tests.lean  lake-manifest.json  lakefile.lean  lex_index_registry.txt  tcb_allowlist.txt
runtime/: Cargo.toml  README.md  canon-hash-fallback.c  deny.toml  knomosis-hash-fallback.c  knomosis-verify-fallback.c  rust-toolchain.toml
runtime/canon-bench/: Cargo.toml
runtime/canon-bench/src/: config.rs  fixture.rs  histogram.rs  lib.rs  main.rs  report.rs  runner.rs  server.rs
runtime/canon-bench/tests/: smoke.rs
runtime/canon-cli-common/: Cargo.toml
runtime/canon-cli-common/src/: exit.rs  lib.rs  paths.rs
runtime/canon-cross-stack/: Cargo.toml
runtime/canon-cross-stack/src/: lib.rs
runtime/canon-cross-stack/tests/: integration.rs
runtime/canon-event-subscribe/: Cargo.toml
runtime/canon-event-subscribe/src/: config.rs  event_cache.rs  extract.rs  frame.rs  lib.rs  main.rs  server.rs  subscription.rs  tail.rs
runtime/canon-event-subscribe/tests/: integration.rs  properties.rs
runtime/canon-faultproof-observer/: Cargo.toml
runtime/canon-faultproof-observer/src/: config.rs  error.rs  events.rs  game.rs  jsonrpc_submitter.rs  lib.rs  main.rs  observer.rs  persistence.rs  state_reader.rs  strategy.rs  submitter.rs  watcher.rs
runtime/canon-faultproof-observer/tests/: chaos.rs  integration.rs  observer_game_traces.rs  property.rs  real_canon_export_cell_proofs.rs  real_canon_export_terminate_bundle.rs  real_canon_subprocess.rs  state_reader_integration.rs
runtime/canon-hash-keccak256/: Cargo.toml  build.rs
runtime/canon-hash-keccak256/c/: lean_shim.c
runtime/canon-hash-keccak256/examples/: gen_keccak256_fixtures.rs
runtime/canon-hash-keccak256/src/: hash.rs  lib.rs
runtime/canon-hash-keccak256/tests/: cross_stack.rs  integration.rs  known_vectors.rs  property.rs
runtime/canon-host/: Cargo.toml
runtime/canon-host/src/: admission.rs  config.rs  frame.rs  kernel.rs  lib.rs  listener.rs  main.rs  queue.rs  server.rs  tls.rs  verdict.rs
runtime/canon-host/tests/: integration.rs  integration_unix.rs  property.rs
runtime/canon-indexer/: Cargo.toml
runtime/canon-indexer/src/: balance.rs  client.rs  config.rs  cursor.rs  daemon.rs  decoder.rs  event.rs  indexer.rs  lib.rs  main.rs
runtime/canon-indexer/tests/: daemon_loop.rs  fault_injection.rs  integration.rs  property.rs  wire_protocol.rs
runtime/canon-l1-ingest/: Cargo.toml
runtime/canon-l1-ingest/examples/: gen_ingest_fixtures.rs
runtime/canon-l1-ingest/src/: action.rs  address_book.rs  encoding.rs  events.rs  fixture.rs  key.rs  lib.rs  main.rs  reorg.rs  source.rs  state.rs  submitter.rs  translation.rs  watcher.rs
runtime/canon-l1-ingest/tests/: cross_stack.rs  integration.rs  property.rs
runtime/canon-storage/: Cargo.toml
runtime/canon-storage/src/: lib.rs  migration.rs  sqlite.rs  storage.rs
runtime/canon-storage/tests/: integration.rs  property.rs
runtime/canon-verify-secp256k1/: Cargo.toml  build.rs
runtime/canon-verify-secp256k1/c/: lean_shim.c
runtime/canon-verify-secp256k1/examples/: gen_ecdsa_fixtures.rs
runtime/canon-verify-secp256k1/src/: lib.rs  verify.rs
runtime/canon-verify-secp256k1/tests/: cross_stack.rs  known_vectors.rs  property.rs
runtime/fuzz/: .gitignore  Cargo.toml  README.md  deny.toml
runtime/fuzz/dictionaries/: host.dict  indexer.dict
runtime/fuzz/fuzz_targets/: host_read_request.rs  indexer_decode_event.rs  l1_ingest_decode_event.rs
runtime/knomosis-bench/: Cargo.toml
runtime/knomosis-bench/src/: config.rs  fixture.rs  histogram.rs  lib.rs  main.rs  report.rs  runner.rs  server.rs
runtime/knomosis-bench/tests/: smoke.rs
runtime/knomosis-cli-common/: Cargo.toml
runtime/knomosis-cli-common/src/: exit.rs  lib.rs  logging.rs  paths.rs
runtime/knomosis-cross-stack/: Cargo.toml
runtime/knomosis-cross-stack/src/: lib.rs
runtime/knomosis-cross-stack/tests/: integration.rs
runtime/knomosis-event-subscribe/: Cargo.toml
runtime/knomosis-event-subscribe/src/: config.rs  event_cache.rs  event_type.rs  extract.rs  frame.rs  lib.rs  main.rs  server.rs  subscription.rs  tail.rs
runtime/knomosis-event-subscribe/tests/: cross_stack_lean_event.rs  integration.rs  properties.rs  real_knomosis_extract_events.rs
runtime/knomosis-faultproof-observer/: Cargo.toml
runtime/knomosis-faultproof-observer/src/: config.rs  error.rs  events.rs  game.rs  jsonrpc_submitter.rs  lib.rs  main.rs  observer.rs  persistence.rs  state_reader.rs  strategy.rs  submitter.rs  watcher.rs
runtime/knomosis-faultproof-observer/tests/: chaos.rs  integration.rs  observer_game_traces.rs  property.rs  real_knomosis_export_cell_proofs.rs  real_knomosis_export_terminate_bundle.rs  real_knomosis_subprocess.rs  state_reader_integration.rs
runtime/knomosis-gateway/: Cargo.toml
runtime/knomosis-gateway-bench/: Cargo.toml
runtime/knomosis-gateway-bench/src/: config.rs  fixture.rs  lib.rs  main.rs  report.rs  runner.rs
runtime/knomosis-gateway/src/: auth.rs  config.rs  cors.rs  dev.rs  dispatch.rs  lib.rs  logging.rs  main.rs  observability.rs  problem.rs  rate_limit.rs  rpc.rs  state.rs  system.rs
runtime/knomosis-gateway/tests/: cross_stack_lean_event.rs  integration.rs  smoke.rs
runtime/knomosis-hash-keccak256/: Cargo.toml  build.rs
runtime/knomosis-hash-keccak256/c/: lean_shim.c
runtime/knomosis-hash-keccak256/examples/: gen_keccak256_fixtures.rs
runtime/knomosis-hash-keccak256/src/: hash.rs  lib.rs
runtime/knomosis-hash-keccak256/tests/: cross_stack.rs  integration.rs  known_vectors.rs  property.rs
runtime/knomosis-host/: Cargo.toml
runtime/knomosis-host/src/: admission.rs  budget.rs  config.rs  frame.rs  kernel.rs  lib.rs  main.rs  (+5 more)
runtime/knomosis-indexer/: Cargo.toml
runtime/knomosis-l1-ingest/: Cargo.toml
runtime/knomosis-storage/: Cargo.toml
runtime/knomosis-verify-secp256k1/: Cargo.toml  build.rs
(+723 files in other folders)
