# Canon  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Orbcrypt/blob/main/LICENSE

# Rust host-runtime workspace manifest.  Houses the stack specified
# in `docs/planning/rust_host_runtime_plan.md` ┬¦2.2.  Each member
# crate corresponds to one sub-workstream (RH-A through RH-G);
# `canon-cross-stack` is a shared dev-only fixture loader (per ┬¦4
# RH-H step 4); `canon-cli-common` is a shared runtime library.
#
# Member-crate maturity (current landing ŌĆö RH-A):
#
#   * `canon-cross-stack`        ŌĆö fully implemented (the
#                                  load-bearing fixture loader other
#                                  crates dev-dep on for cross-stack
#                                  equivalence).
#   * `canon-cli-common`         ŌĆö fully implemented (shared CLI /
#                                  logging helpers).
#   * `canon-verify-secp256k1`   ŌĆö fully implemented (RH-A.1: ECDSA
#                                  secp256k1 verifier; cdylib exports
#                                  `canon_verify_ecdsa`).
#   * `canon-hash-keccak256`     ŌĆö fully implemented (RH-A.2:
#                                  Keccak-256 hash adaptor; cdylib
#                                  exports `canon_hash_bytes` /
#                                  `canon_hash_stream` /
#                                  `canon_hash_identifier`).
#   * `canon-host`, `canon-l1-ingest`, `canon-event-subscribe`,
#     `canon-storage`, `canon-indexer`, `canon-faultproof-observer`,
#     `canon-bench`              ŌĆö skeleton-only.  Each has a minimal
#                                  `lib.rs` / `main.rs` documenting
#                                  the symbol surface its work unit
#                                  must fill in.  Skeletons compile
#                                  clean, satisfy `cargo clippy -D
#                                  warnings`, and pass `cargo fmt
#                                  --check`.

[workspace]
resolver = "2"
members = [
    "canon-cli-common",
    "canon-cross-stack",
    "canon-verify-secp256k1",
    "canon-hash-keccak256",
    "canon-host",
    "canon-l1-ingest",
    "canon-event-subscribe",
    "canon-storage",
    "canon-indexer",
    "canon-faultproof-observer",
    "canon-bench",
]

# Shared package metadata.  Per-crate manifests use
# `package.<field>.workspace = true` to inherit.  Centralising the
# version, edition, MSRV, license, and repository here lets RH-H
# guarantee a uniform release surface without per-crate drift.
#
# Version-bump discipline.  Per the workspace policy in CLAUDE.md
# / AGENTS.md, each PR bumps the patch component unless the user
# explicitly opts in to a minor or major bump.  Bumping the
# version here propagates to every member crate via
# `version.workspace = true`.
[workspace.package]
version = "0.1.2"
edition = "2021"
# `rust-version` documents the workspace's minimum-supported-Rust-
# version (MSRV).  `rust-toolchain.toml` pins the build channel; this
# field gates `cargo` itself before any compilation begins.  Bumping
# the MSRV is a workspace-level PR, not a per-crate one.
rust-version = "1.83"
license = "GPL-3.0-only"
repository = "https://github.com/hatter6822/Canon"
publish = false

# Centralised dependency versions.  Members reference these by
# `dependency.workspace = true`.  Pin minor versions (per the RH plan
# ┬¦7 risk register) so toolchain drift in any single sub-stream cannot
# silently introduce a breaking dependency upgrade.
#
# The list is intentionally minimal: each entry is consumed by at
# least one current member crate.  Future work units (RH-A onward)
# add their own dependencies (e.g. `k256`, `sha3`, `tokio`, `ethers`)
# to this table when they need them.
[workspace.dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# RH-A cryptographic adaptor dependencies.  Pinned to minor versions
# per the plan ┬¦7 risk register: silent major-version bumps in audited
# crypto crates require a fresh review pass.
#
#   * `k256` ŌĆö secp256k1 / ECDSA primitives.  `default-features = false`
#     disables `std` and `serde`, narrowing the surface.  `ecdsa` is
#     the verification feature; `arithmetic` enables `Scalar` /
#     `is_high` for the low-s canonicalisation predicate; `pkcs8` is
#     deliberately omitted (we parse SEC1-compressed pubkeys only).
#   * `sha3` ŌĆö Keccak-256 hash primitive (Ethereum flavour, NOT the
#     FIPS-202 SHA3-256 variant; common foot-gun documented in the
#     plan ┬¦RH-A.2.a).  `default-features = false` disables `std`.
#   * `subtle` ŌĆö constant-time comparison primitives used by the
#     verification adaptor's high-s bounds check.  No-std,
#     audited.
#   * `hex` ŌĆö hex en/decoding for test fixtures.  Dev-only.
#   * `proptest` ŌĆö property-based testing.  Dev-only.
#   * `cc` ŌĆö C compiler driver for the Lean-ABI shim build.rs
#     scripts.  Build-dependency only; not in the production
#     binary.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
sha3 = { version = "0.10", default-features = false }
subtle = { version = "2.6", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
proptest = { version = "1.5", default-features = false, features = ["std"] }
cc = "1.0"

# RH-B (L1 ingestor) dependencies.  Pinned to minor versions per the
# plan ┬¦7 risk register.
#
#   * `zeroize` ŌĆö `Zeroizing<T>` wrapper that scrubs secret material
#     (bridge-actor private keys) on drop.  No-std core; the
#     `zeroize_derive` feature is intentionally not requested
#     (we wrap raw byte buffers, no struct-derive needed).
#   * `serde` / `serde_json` ŌĆö JSON-RPC request / response framing.
#     `serde`'s `derive` feature lets us derive (De)Serialize on
#     typed RPC envelopes; `serde_json` is the actual codec.  Both
#     are runtime deps of the L1 ingestor (and the future fault-
#     proof observer).
#   * `tempfile` ŌĆö dev-only; used across the workspace for isolated
#     tempdir creation.  Pinned at `~3.14` to retain Rust 1.83
#     compatibility (newer versions require Rust 1.85 for
#     `edition2024`).  Workspace-shared so every dev-dep tempfile
#     stays in sync.
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tempfile = "~3.14"

# Workspace-internal crates (other members depend on these via the
# `workspace = true` shorthand).
canon-cli-common = { path = "canon-cli-common" }
canon-cross-stack = { path = "canon-cross-stack" }

# CI / release profile.  `lto = "thin"` keeps release builds reasonably
# fast while still hitting cross-crate optimisations.  `panic = "abort"`
# in release ensures cryptographic adaptors (`canon-verify-secp256k1`,
# `canon-hash-keccak256`) cannot unwind into Lean's runtime via the C
# ABI ŌĆö a panicking-into-FFI scenario is undefined behaviour and the
# crates' contracts mandate "no panic" anyway.
#
# The `test` and `bench` profiles inherit from `dev`, which keeps
# `panic = "unwind"` (required for `#[should_panic]` tests).  Cargo
# rejects `panic` overrides on the `test` profile directly, so we do
# not set it here.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
panic = "abort"
strip = "debuginfo"
