# Knomosis  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Knomosis/blob/main/LICENSE

# Rust host-runtime workspace manifest.  Houses the stack specified
# in `docs/planning/rust_host_runtime_plan.md` §2.2.  Each member
# crate corresponds to one sub-workstream (RH-A through RH-G);
# `knomosis-cross-stack` is a shared dev-only fixture loader (per §4
# RH-H step 4); `knomosis-cli-common` is a shared runtime library.
#
# Member-crate maturity (current landing — RH-E):
#
#   * `knomosis-cross-stack`        — fully implemented (the
#                                  load-bearing fixture loader other
#                                  crates dev-dep on for cross-stack
#                                  equivalence).
#   * `knomosis-cli-common`         — fully implemented (shared CLI /
#                                  logging helpers).
#   * `knomosis-verify-secp256k1`   — fully implemented (RH-A.1: ECDSA
#                                  secp256k1 verifier; cdylib exports
#                                  `knomosis_verify_ecdsa`).
#   * `knomosis-hash-keccak256`     — fully implemented (RH-A.2:
#                                  Keccak-256 hash adaptor; cdylib
#                                  exports `knomosis_hash_bytes` /
#                                  `knomosis_hash_stream` /
#                                  `knomosis_hash_identifier`).
#   * `knomosis-l1-ingest`          — fully implemented (RH-B: L1
#                                  event ingestor + bridge-actor
#                                  signer + JSONL state +
#                                  re-org-tolerant watcher).
#   * `knomosis-host`               — fully implemented (RH-C: TCP /
#                                  TLS / Unix-socket network
#                                  adaptor with bounded mpsc queue,
#                                  Busy backpressure, Kernel trait
#                                  + MockKernel/CommandKernel impls).
#   * `knomosis-event-subscribe`    — fully implemented (RH-D: log-tail
#                                  + extractor + subscriber registry
#                                  + bounded-lag eviction + wire-
#                                  format spec at docs/abi.md §11).
#   * `knomosis-storage`            — fully implemented (RH-E.0:
#                                  Storage / StorageSnapshot /
#                                  StorageTransaction traits plus
#                                  SqliteStorage with WAL mode,
#                                  deferred-read snapshots, append-
#                                  only migrations).
#   * `knomosis-indexer`            — fully implemented (RH-E.1: daemon
#                                  that consumes events via knomosis-
#                                  event-subscribe and maintains the
#                                  per-(actor, resource) balance
#                                  view in a knomosis-storage DB).
#   * `knomosis-bench`              — fully implemented (RH-F: transfer-
#                                  throughput benchmark suite measuring
#                                  knomosis-host's end-to-end performance;
#                                  library + binary with fixture
#                                  generator, latency histogram, JSON
#                                  report, baseline regression check).
#   * `knomosis-faultproof-observer`
#                                — fully implemented (RH-G: off-chain
#                                  bisection-game observer daemon.
#                                  Game state machine + honest
#                                  strategy + L1 watcher with re-org
#                                  handling + persistence via
#                                  knomosis-storage + pluggable submitter
#                                  trait with mock impl + ABI calldata
#                                  encoder for the four observer-
#                                  callable contract methods).

[workspace]
resolver = "2"
members = [
    "knomosis-cli-common",
    "knomosis-cross-stack",
    "knomosis-verify-secp256k1",
    "knomosis-hash-keccak256",
    "knomosis-host",
    "knomosis-l1-ingest",
    "knomosis-event-subscribe",
    "knomosis-storage",
    "knomosis-indexer",
    "knomosis-faultproof-observer",
    "knomosis-bench",
]

# Shared package metadata.  Per-crate manifests use
# `package.<field>.workspace = true` to inherit.  Centralising the
# version, edition, MSRV, license, and repository here lets RH-H
# guarantee a uniform release surface without per-crate drift.
#
# Version-bump discipline.  Per the workspace policy in CLAUDE.md
# / AGENTS.md, each PR bumps the patch component unless the user
# explicitly opts in to a minor or major bump.  Bumping the
# version here propagates to every member crate via
# `version.workspace = true`.
[workspace.package]
version = "0.4.3"
edition = "2021"
# `rust-version` documents the workspace's minimum-supported-Rust-
# version (MSRV).  `rust-toolchain.toml` pins the build channel; this
# field gates `cargo` itself before any compilation begins.  Bumping
# the MSRV is a workspace-level PR, not a per-crate one.
rust-version = "1.83"
license = "GPL-3.0-or-later"
repository = "https://github.com/hatter6822/Knomosis"
publish = false

# Centralised dependency versions.  Members reference these by
# `dependency.workspace = true`.  Pin minor versions (per the RH plan
# §7 risk register) so toolchain drift in any single sub-stream cannot
# silently introduce a breaking dependency upgrade.
#
# The list is intentionally minimal: each entry is consumed by at
# least one current member crate.  Future work units (RH-A onward)
# add their own dependencies (e.g. `k256`, `sha3`, `tokio`, `ethers`)
# to this table when they need them.
[workspace.dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# RH-A cryptographic adaptor dependencies.  Pinned to minor versions
# per the plan §7 risk register: silent major-version bumps in audited
# crypto crates require a fresh review pass.
#
#   * `k256` — secp256k1 / ECDSA primitives.  `default-features = false`
#     disables `std` and `serde`, narrowing the surface.  `ecdsa` is
#     the verification feature; `arithmetic` enables `Scalar` /
#     `is_high` for the low-s canonicalisation predicate; `pkcs8` is
#     deliberately omitted (we parse SEC1-compressed pubkeys only).
#   * `sha3` — Keccak-256 hash primitive (Ethereum flavour, NOT the
#     FIPS-202 SHA3-256 variant; common foot-gun documented in the
#     plan §RH-A.2.a).  `default-features = false` disables `std`.
#   * `subtle` — constant-time comparison primitives used by the
#     verification adaptor's high-s bounds check.  No-std,
#     audited.
#   * `hex` — hex en/decoding for test fixtures.  Dev-only.
#   * `proptest` — property-based testing.  Dev-only.
#   * `cc` — C compiler driver for the Lean-ABI shim build.rs
#     scripts.  Build-dependency only; not in the production
#     binary.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
sha3 = { version = "0.10", default-features = false }
subtle = { version = "2.6", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
proptest = { version = "1.5", default-features = false, features = ["std"] }
cc = "1.0"

# RH-B (L1 ingestor) dependencies.  Pinned to minor versions per the
# plan §7 risk register.
#
#   * `zeroize` — `Zeroizing<T>` wrapper that scrubs secret material
#     (bridge-actor private keys) on drop.  No-std core; the
#     `zeroize_derive` feature is intentionally not requested
#     (we wrap raw byte buffers, no struct-derive needed).
#   * `serde` / `serde_json` — JSON-RPC request / response framing.
#     `serde`'s `derive` feature lets us derive (De)Serialize on
#     typed RPC envelopes; `serde_json` is the actual codec.  Both
#     are runtime deps of the L1 ingestor (and the future fault-
#     proof observer).
#   * `tempfile` — dev-only; used across the workspace for isolated
#     tempdir creation.  Pinned at `~3.14` to retain Rust 1.83
#     compatibility (newer versions require Rust 1.85 for
#     `edition2024`).  Workspace-shared so every dev-dep tempfile
#     stays in sync.
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tempfile = "~3.14"

# RH-C (knomosis-host network adaptor) TLS dependencies.  Pinned to
# minor versions per the plan §7 risk register.
#
#   * `rustls` — TLS termination at the TCP boundary.  `ring` is
#     the audited cryptographic backend (vs `aws-lc-rs` which
#     pulls in cmake + an out-of-tree C library).  `tls12` is
#     enabled so operators can opt into TLS 1.2 for interop with
#     older clients; default minimum is still 1.3 per the plan
#     §RH-C.3 recommendation.
#   * `rustls-pemfile` — PEM-encoded certificate / key parser.
#     Tiny dependency (parser only, no crypto); decouples the
#     PEM-loading codepath from the rustls major version.
#   * `rustls-pki-types` — shared certificate / private-key type
#     vocabulary between rustls and rustls-pemfile.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = { version = "2", default-features = false, features = ["std"] }
rustls-pki-types = { version = "1.10", default-features = false, features = ["std"] }

# RH-E (storage abstraction + indexer) dependencies.  Pinned to minor
# versions per the plan §7 risk register.
#
#   * `rusqlite` — Rust bindings to SQLite.  The `bundled` feature
#     compiles SQLite from source as part of the crate's build,
#     yielding a self-contained library with no system dependency
#     on libsqlite3.  This matches the workspace's policy of pinning
#     every dependency at the source level for byte-reproducible
#     builds.  `backup` enables online backup API (used for taking
#     snapshots in the migration scaffolding); `column_decltype` is
#     enabled by default and surfaces schema introspection used by
#     the version-check.  Default features (`modern_sqlite`,
#     `min_sqlite_version_3_14_0`) intentionally kept; we rely on
#     `WAL` mode (3.7+) and `BEGIN DEFERRED` (any version).
rusqlite = { version = "0.31", default-features = false, features = ["bundled"] }

# Workspace-internal crates (other members depend on these via the
# `workspace = true` shorthand).
knomosis-cli-common = { path = "knomosis-cli-common" }
knomosis-cross-stack = { path = "knomosis-cross-stack" }

# CI / release profile.  `lto = "thin"` keeps release builds reasonably
# fast while still hitting cross-crate optimisations.  `panic = "abort"`
# in release ensures cryptographic adaptors (`knomosis-verify-secp256k1`,
# `knomosis-hash-keccak256`) cannot unwind into Lean's runtime via the C
# ABI — a panicking-into-FFI scenario is undefined behaviour and the
# crates' contracts mandate "no panic" anyway.
#
# The `test` and `bench` profiles inherit from `dev`, which keeps
# `panic = "unwind"` (required for `#[should_panic]` tests).  Cargo
# rejects `panic` overrides on the `test` profile directly, so we do
# not set it here.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
panic = "abort"
strip = "debuginfo"
