# Knomosis  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Orbcrypt/blob/main/LICENSE

# `canon-bench` — RH-F.  Transfer-throughput benchmark suite measuring
# `canon-host` performance end-to-end over a Unix-socket (TCP fallback
# for non-Unix platforms).  See `docs/planning/rust_host_runtime_plan.md`
# §RH-F for the engineering plan.
#
# Build artefacts:
#   * `rlib` (library) — exports the benchmark primitives (fixture
#     generation, latency histogram, runner, report, baseline
#     comparison).  Consumed by the binary plus integration tests.
#   * Binary (`canon-bench`) — the standalone benchmark harness.
#     Parses CLI flags, builds a fixture, spawns an in-process
#     canon-host (or connects to one), drives the benchmark loop,
#     and emits a human + JSON report.
#
# RH-F decomposes into five sub-sub-units (see plan §RH-F):
#   * RH-F.1 — Fixture generator (`fixture.rs`): pre-funded actors +
#     pre-signed transfer SignedActions.
#   * RH-F.2 — Latency histogram (`histogram.rs`): bounded-resolution
#     percentile tracker.
#   * RH-F.3 — Runner (`runner.rs`): concurrent submitter driving a
#     local canon-host over Unix-socket / TCP.
#   * RH-F.4 — Report (`report.rs`): human + JSON output, regression
#     check against an optional baseline.
#   * RH-F.5 — CLI binary (`main.rs`) + smoke + integration tests.

[package]
name = "canon-bench"
description = "Knomosis transfer-throughput benchmark suite (RH-F)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "canon-bench"
path = "src/main.rs"

[dependencies]
# Shared CLI / logging helpers — every Knomosis binary uses these for
# uniform `--help` / `--version` output and `tracing` initialisation.
canon-cli-common = { workspace = true }
# `canon-host` is the system-under-benchmark.  The runtime dep is
# load-bearing: `server.rs` spawns an in-process MockKernel-backed
# `canon_host::server::Server` for the harness's `--standalone`
# mode, and the runner's frame layout / verdict-byte semantics
# are documented in `canon_host`'s `frame` + `verdict` modules.
canon-host = { path = "../canon-host" }
# `canon-l1-ingest` ships the Action enum + CBE encoder + signing
# input + BridgeActorKey.  Reusing these avoids duplicating
# cross-stack-equivalent primitives.  The benchmark uses them to
# build realistic SignedAction payloads.
canon-l1-ingest = { path = "../canon-l1-ingest" }
# `sha3` provides the Keccak-256 primitive used by the fixture
# generator for deterministic actor-scalar derivation
# (`fixture::actor_private_scalar`).  Workspace-default
# `default-features = false` is sufficient (we use `Digest::update`
# / `finalize`, which are no-std).
sha3 = { workspace = true }
# `thiserror` derives the typed error variants used by the benchmark
# runner / report / fixture modules.  Same discipline as canon-host
# and canon-l1-ingest.
thiserror = { workspace = true }
# `tracing` is the structured-logging API.  The benchmark emits
# per-phase `tracing::info` events (setup, warmup, measurement,
# report).
tracing = { workspace = true }
# `tracing-subscriber` initialises the logging pipeline via
# `canon-cli-common::logging::init`.
tracing-subscriber = { workspace = true }
# `serde` / `serde_json` underpin the JSON report format.  Reports
# are emitted both to stdout (for human reading) and to a JSON
# sidecar file (`--report <PATH>`) for CI baseline comparison.
serde = { workspace = true }
serde_json = { workspace = true }
# `tempfile` is needed by the binary's standalone-Unix mode for
# auto-allocating a 0700-mode parent tempdir when no explicit
# `--unix-socket <PATH>` is supplied.  Workspace pin at ~3.14
# (newer requires Rust 1.85).
tempfile = { workspace = true }

# [dev-dependencies] is intentionally empty at this landing.
# `tempfile` is needed by both the binary's auto-allocation path AND
# the smoke tests, so it lives in `[dependencies]` above and is
# transitively available to the test suite without re-declaration.

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# `missing_errors_doc` / `missing_panics_doc` are pedantic lints whose
# value is the rustc `missing_docs` lint, which already fires on every
# public surface.  Workspace convention.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# `module_name_repetitions` triggers on names like `BenchConfig`
# inside `canon_bench`.  Workspace convention.
module_name_repetitions = "allow"
# `must_use_candidate` is a stylistic suggestion that fires on every
# pure getter / constructor.  Allowing it keeps the surface focused
# on safety-relevant lints.
must_use_candidate = "allow"
# `cast_possible_truncation` fires on legitimate `usize -> u64` and
# similar size-class casts.  Bounded by upstream invariants;
# allowing keeps the noise floor low.
cast_possible_truncation = "allow"
# `cast_precision_loss` fires on `u64 -> f64` casts used for
# percentile arithmetic (where we accept ±1 ULP precision loss for
# throughput-arithmetic readability).
cast_precision_loss = "allow"
# `cast_sign_loss` fires on `i64 -> u64` and friends; bounded by
# upstream invariants at the boundary.
cast_sign_loss = "allow"
# `unreadable_literal` fires on the secp256k1 curve-order constant
# (`SECP256K1_ORDER_BE` in `fixture.rs`) and similar flat 32-byte
# representations.  The curve-order bytes are the canonical
# representation; adding underscores wouldn't improve readability.
unreadable_literal = "allow"
# `doc_markdown` fires on prose words that look like type names but
# lack backticks (e.g. "SignedAction" mentioned in narrative
# Markdown).  Cosmetic only.
doc_markdown = "allow"
# `too_many_lines` complains about > 100-line functions.  Our
# benchmark loop and report formatter legitimately exceed this.
too_many_lines = "allow"
# `useless_format` fires when `format!("literal")` could be replaced
# by `String::from("literal")` or `.to_string()`.  Differences are
# negligible.
useless_format = "allow"
# `default_trait_access` fires on `Default::default()` calls we use
# intentionally for clarity.
default_trait_access = "allow"
# `similar_names` fires on `p99_ns` vs `p999_ns`, which are
# domain-natural latency-percentile names.  Same allowance as
# canon-l1-ingest for legitimate bindings that happen to share a
# common prefix.
similar_names = "allow"
# `match_wildcard_for_single_variants` fires on `_ => panic!(...)`
# arms in tests that catch unexpected variants.  The explicit
# variant would force a re-spell on every new enum constructor —
# the catch-all is intentional defensive coding.
match_wildcard_for_single_variants = "allow"
# `field_reassign_with_default` fires on the per-test pattern of
# `let mut cfg = X::default(); cfg.foo = ...;`.  This is more
# readable than struct-literal `X { foo: ..., ..Default::default() }`
# for tests that override a single field; allowing keeps tests
# scannable.
field_reassign_with_default = "allow"
# `redundant_closure_for_method_calls` fires on `|p| p.into_inner()`
# and similar patterns we use intentionally for clarity
# (`unwrap_or_else(...)` binds the closure's input to a typed
# `PoisonError`).
redundant_closure_for_method_calls = "allow"
# `manual_div_ceil` fires on the `(a + b - 1) / b` idiom; the
# stable `div_ceil` only exists for built-in integer types under
# specific cfgs.  Allowing keeps the idiom intact.
manual_div_ceil = "allow"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
# `forbid` is appropriate here: the benchmark is a pure-Rust harness
# with no FFI surface.  If we ever need `unsafe`, it's a review
# blocker, not a lint relaxation.
unsafe_code = "forbid"
