# Canon  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Orbcrypt/blob/main/LICENSE

# `canon-faultproof-observer` — RH-G implementation.
#
# The off-chain daemon that watches L1 for bisection-game events,
# computes the honest bisection response via the kernel-coherent
# game state machine + truthful-commit oracle, signs and submits
# responses to the L1 contract, and persists watcher / game state
# in `canon-storage` for crash-recovery.
#
# See `docs/planning/rust_host_runtime_plan.md` §RH-G,
# `docs/fault_proof_runbook.md` §7, and the seven sub-sub-units
# RH-G.1 .. RH-G.7 documented in the planning file.

[package]
name = "canon-faultproof-observer"
description = "Off-chain fault-proof bisection-game observer (RH-G)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "canon-faultproof-observer"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
canon-cli-common = { workspace = true }
canon-storage = { path = "../canon-storage" }
# `canon-l1-ingest` is consumed for its sliding-window re-org tracker
# (`reorg::{ReorgWindow, BlockHeader, AdvanceOutcome, ReorgError}`)
# plus the production HTTP-only JSON-RPC L1 source
# (`source::json_rpc::JsonRpcL1Source`) and the bridge-actor signing
# key wrapper (`key::BridgeActorKey`).  Sharing these modules avoids
# duplicating the re-org machinery and the zeroize-protected key
# code already audited under RH-B.  The plan §RH-B.4 / §RH-G.2
# explicitly recommends sharing the re-org module across both
# crates.
canon-l1-ingest = { path = "../canon-l1-ingest" }
hex = { workspace = true }
k256 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
canon-cross-stack = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
